dist/LineScript-win64-20260616/tests/cases/compile_fail/format_bad_arity.lsc
main() -> i64 do
  .format(1)
  return 0
end
